--- a/product2.html
+++ b/product2.html
@@ -50,7 +50,7 @@
     </form>
   </div>
 </nav>
-<!-- ****************************************** end of header *****************************************************
+<!-- ****************************************** end of header *********************************style="width: 500px; height: 500px;"***data-holder-rendered="true"*****************
  -->
  <div class="container my-5">
     <div class="row featurette d-flex justify-content-center align-items-center">
@@ -59,7 +59,7 @@
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="mech1.jpg" data-holder-rendered="true">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500"  src="mech1.jpg" >
           </div>
     </div>
 </div>
