--- a/products.html
+++ b/products.html
@@ -56,7 +56,7 @@
     </div>
   </div>
 </nav>
-<!-- ****************************************** end of header *****************************************************
+<!-- ****************************************** end of header **********************************************style="width: 500px; height: 500px;"*******
  -->
  <div class="container marketing">
 
@@ -82,7 +82,7 @@
             <p >Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5 order-md-1">
-             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="mech1.jpg" data-holder-rendered="true">
+             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500"  src="mech1.jpg" data-holder-rendered="true">
           </div>
         </div>
 
@@ -94,7 +94,7 @@
             <h5 >Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</h5>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" src="mech3.jpg" data-holder-rendered="true" style="width: 500px; height: 500px;">
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" src="mech3.jpg" data-holder-rendered="true" >
           </div>
         </div>
 
