--- a/product2.html
+++ b/product2.html
@@ -55,11 +55,11 @@
  <div class="container my-5">
     <div class="row featurette d-flex justify-content-center align-items-center">
           <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+            <h2 class="featurette-heading">Brick Machine</h2> <h4 class="text-muted">It'll blow your mind.</h4>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500"  src="mech1.jpg" >
+            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500"  src="mech3.jpg" >
           </div>
     </div>
 </div>
