--- a/product.html
+++ b/product.html
@@ -61,7 +61,7 @@
  <div class="container my-5">
     <div class="row featurette d-flex justify-content-center align-items-center">
           <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+            <h2 class="featurette-heading">Hammer Mill </h2><h4 class="text-muted">It'll blow your mind.</h4>
             <h5 class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</h5>
           </div>
           <div class="col-md-5">
